# CppChat

./: .gitignore  README.md  client.cpp  server.cpp
client/: Activty.hpp  CMakeLists.txt  Makefile  asynctcpclient.hpp  chat.hpp  client.cpp  guiTest.cpp  login.hpp  main.cpp  title.hpp
server/: CMakeLists.txt  Makefile  main.cpp  server.cpp  server.hpp  service.hpp  worker.hpp
